Fixed styling of navbar. It was too wide in some browssers

--- a/restcomm.rvd/src/main/webapp/css/rvd.css
+++ b/restcomm.rvd/src/main/webapp/css/rvd.css
@@ -224,7 +224,11 @@ ul.verbs {
  * 
  * BOOTSTRAP CUSTOMIZATIONS 
  * 
- * /
+ */
+
+.navbar-header {
+	float: none;
+}
 
 
 /* Bootstrap extension for having a lot of stuff on nav-tabs */
